--- a/backend/cart-service/src/main/resources/application.properties
+++ b/backend/cart-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.sql.init.mode=always
