--- a/k8s/services/catalog-service-green.yaml
+++ b/k8s/services/catalog-service-green.yaml
@@ -1,16 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catalog-service
+  name: catalog-service-green
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: catalog-service
+      version: green
   template:
     metadata:
       labels:
         app: catalog-service
+        version: green
     spec:
       containers:
       - name: catalog-service
@@ -34,15 +36,3 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: password
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: catalog-service
-spec:
-  selector:
-    app: catalog-service
-  ports:
-    - protocol: TCP
-      port: 5000
-      targetPort: 5000
