--- a/.github/workflows/validate-aws.yml
+++ b/.github/workflows/validate-aws.yml
@@ -25,7 +25,10 @@ jobs:
       - name: Validate EKS Access
         run: |
           aws eks describe-cluster --name ${{ secrets.EKS_CLUSTER_NAME }}
-      
+
+      - name: Check Kubernetes Cluster Connection
+        run: kubectl get nodes
+
       - name: Validate Kubernetes Access
         run: |
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > kubeconfig.yaml
